my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/WDEPRECATED/T_WDEPRECATED-struct.h
/* Generated by dmlc, do not edit! */

#ifndef T_WDEPRECATED_STRUCT_H
#define T_WDEPRECATED_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_WDEPRECATED(void);


#endif /* not T_WDEPRECATED_STRUCT_H */
